Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13227

sanityn 16a FAIL: fsx with O_DIRECT failed.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      Size error: expected 0x659000 stat 0x145d12 seek 0x659000
      LOG DUMP (849 total operations):

      Full logs could be found here:

      https://testing-archive.whamcloud.com/gerrit-janitor/6308/testresults/sanityn-ldiskfs-DNE-centos7_x86_64-centos7_x86_64/sanityn.test_16a.test_log.oleg357-client.log

      The problem might be related to following cases:

      1) Client A try to ftruncate file to file_size.
      2) Client B Direct Write (punch hole )to update new_file_size.
      3) Client A try to stat file to check whether it could get new_file_size, but got old file_size instead.

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: